# routes/api.php
@@ -14,6 +14,8 @@ use App\Http\Controllers\ImageController;
 use App\Http\Controllers\PhishController;
 use App\Http\Controllers\RolesController;
 use App\Http\Controllers\CrawlerController;
+use App\Http\Controllers\LogController;
+
 
 Route::post('/register', [AuthController::class, 'register']);
 Route::post('/login', [AuthController::class, 'login']);
@@ -32,4 +34,6 @@ Route::get('/random-image', [ImageController::class, 'fetchRandomImage']);
 Route::post('/phish', [PhishController::class, 'handlePhish']);
 Route::post('/phish/handlePhishData', [PhishController::class, 'handlePhishData']);
 Route::post('/crawlerInformation', [CrawlerController::class, 'crawlerInformation']);
-
+Route::post('/getLastLogs', [LogController::class, 'getLastLogs']);
+Route::post('/getLogsByUser', [LogController::class, 'getLogsByUser']);
+Route::post('/getLogsByFunctionality', [LogController::class, 'getLogsByFunctionality']);
